<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="text_create_account">Si aún no tienes cuenta, registrate aquí.</string>
    <string name="text_go_login">Si ya dispone de una cuenta, inicie sesión aquí</string>
    <string name="btn_signup">Registrarme</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toolbar_title_home">Inicio</string>
    <string name="text_twittear">Twittear</string>
    <string name="hint_mensaje_nuevo_tweet">Que esta pasando?</string>
    <string name="hint_password_current">Contraseña actual</string>
    <string name="btn_save_profile">Guardar</string>
    <string name="btn_chanse_password">Cambiar Contraseña</string>
    <string name="hint_web_site">Website</string>
    <string name="hind_description">Descripcion e intereses</string>
</resources>